@@ -42,3 +42,4 @@
 2017-08-09 - V 1.0.0-beta1 : New auto-upgrade process
 2017-08-10 - V 1.0.0 : Auto Upgrade works correctly + add build file
 2017-12-29 - V 1.1.0 : New commands to deals with cron tasks ( with native module cronjobs )
+2018-01-23 - V 1.2.0 : New commands to clean existing datas ( with native module pscleaner )
